@@ -13,7 +13,7 @@ module-inserter-ex-choose-module=Select a module
 module-inserter-ex-choose-module-fill-all-tooltip=Setting this slot will also set all other slots to the same module
 module-inserter-ex-export-all=Export all presets to a json string
 module-inserter-ex-export-single=Export this preset to a json string
-module-inserter-ex-import=Import from a json string
+module-inserter-ex-import=Import from a json string\nOr click while holding a blueprint to create a config based on its contents
 module-inserter-ex-config-not-set=No configuration set for Module Inserter
 module-inserter-ex-destroy=Destroy Module Inserter
 module-inserter-ex-keep-open=Keep open
